--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -6,25 +6,35 @@
 	android:orientation="horizontal"
 	android:gravity="center_horizontal"
 	android:padding="0px"
-	android:background="#00000000">
+	android:background="@drawable/footer_bg">
+	
 	<Button
-		android:id="@+id/search_Button"
-		android:background="@drawable/search_button"
+		android:id="@+id/locationButton"
+		android:background="@drawable/locations"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
-	<Button 
-		android:id="@+id/nearbyButton"
-		android:background="@drawable/nearby_button"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
-	<Button 
-		android:id="@+id/shareButton"
-		android:background="@drawable/share_button"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+	
 	<Button
-		android:id="@+id/map_Button"
-		android:background="@drawable/map_button"
+		android:id="@+id/restaurantButton"
+		android:background="@drawable/restaurant"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" />
+		
+	<Button
+		android:id="@+id/cuisineButton"
+		android:background="@drawable/cuisine"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" />
+		
+	<Button
+		android:id="@+id/favoriteButton"
+		android:background="@drawable/favorite"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" />
+	
+	<Button
+		android:id="@+id/searchButton"
+		android:background="@drawable/searches"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 </LinearLayout>
