--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -2,8 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content"
-	android:orientation="horizontal">
+	android:orientation="horizontal" android:layout_height="wrap_content">
 	
 	<Button 
 		android:id="@+id/settingsButton"
@@ -24,8 +23,7 @@
 			android:layout_width="wrap_content" 
 			android:background="@drawable/header" 
 			android:gravity="center" 
-			android:layout_height="wrap_content" 
 			android:layout_marginTop="5px" 
-			android:layout_marginRight="39px" />
+			android:layout_marginRight="39px" android:layout_height="wrap_content"/>
 	</LinearLayout>
 </LinearLayout>
