--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -1,49 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
+<LinearLayout
+	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:orientation="horizontal"
-	android:gravity="center_horizontal"
-	android:padding="0px"
-	android:background="@drawable/footer_bg">
+	android:orientation="vertical"
+	xmlns:android="http://schemas.android.com/apk/res/android">
 	
-	<Button
-		android:id="@+id/locationButton"
-		android:background="@drawable/locations"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:layout_marginTop="3px"
-		android:layout_marginBottom="3px" />
+	<HorizontalScrollView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:scrollbars="none"
+    	android:background="@drawable/roundededge"
+    	android:layout_marginRight="5px"
+       	android:foregroundGravity="center_vertical|center_horizontal" 
+       	android:clipChildren="true" 
+       	android:fadingEdge="none" 
+       	android:clipToPadding="true" 
+       	android:layout_marginLeft="5px" 
+       	android:paddingLeft="5px" 
+       	android:paddingRight="5px" 
+       	android:layout_marginTop="5px" 
+       	android:layout_marginBottom="5px">
+        			
+    	<ImageView 
+       		android:src="@drawable/cc_image"
+       		android:layout_width="wrap_content"
+       		android:layout_height="wrap_content" 
+       		android:padding="5px"/>
+	</HorizontalScrollView>
 	
-	<Button
-		android:id="@+id/restaurantButton"
-		android:background="@drawable/restaurant"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:layout_marginTop="3px"
-		android:layout_marginBottom="3px" />
-	<Button
-		android:id="@+id/cuisineButton"
-		android:background="@drawable/cuisine"
-		android:layout_width="wrap_content"
+	<LinearLayout
+		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
-		android:layout_marginTop="3px"
-		android:layout_marginBottom="3px" />
+		android:orientation="horizontal"
+		android:gravity="center_horizontal"
+		android:background="@drawable/footer_bg">
+	
+		<Button
+			android:id="@+id/locationButton"
+			android:background="@drawable/locations"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" 
+			android:layout_marginTop="3px"
+			android:layout_marginBottom="3px" />
+	
+		<Button
+			android:id="@+id/restaurantButton"
+			android:background="@drawable/restaurant"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" 
+			android:layout_marginTop="3px"
+			android:layout_marginBottom="3px" />
+		<Button
+			android:id="@+id/cuisineButton"
+			android:background="@drawable/cuisine"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="3px"
+			android:layout_marginBottom="3px" />
 		
-	<Button
-		android:id="@+id/favoriteButton"
-		android:background="@drawable/favorite"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="3px"
-		android:layout_marginBottom="3px" />
+		<Button
+			android:id="@+id/favoriteButton"
+			android:background="@drawable/favorite"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="3px"
+			android:layout_marginBottom="3px" />
 	
-	<Button
-		android:id="@+id/searchButton"
-		android:background="@drawable/searches"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="3px"
-		android:layout_marginBottom="3px" />
+		<Button
+			android:id="@+id/searchButton"
+			android:background="@drawable/searches"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="3px"
+			android:layout_marginBottom="3px" />
+	</LinearLayout>
 </LinearLayout>
