--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -1,29 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
-	android:orientation="horizontal" android:layout_height="wrap_content">
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical">
+	<LinearLayout
+		android:layout_width="fill_parent" 
+		android:orientation="horizontal" 
+		android:layout_height="wrap_content">
 	
-	<Button 
-		android:id="@+id/settingsButton"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:background="@drawable/buttonsetting"
-		android:layout_marginTop="5px" 
-		android:layout_marginLeft="5px" />
+		<Button 
+			android:id="@+id/settingsButton"
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:background="@drawable/buttonsetting"
+			android:layout_marginTop="5px" 
+			android:layout_marginLeft="5px" />
 			
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			android:gravity="center_horizontal">
+		
+			<ImageView 
+				android:id="@+id/headerBannerImage"
+				android:layout_width="wrap_content" 
+				android:background="@drawable/header" 
+				android:gravity="center" 
+				android:layout_marginTop="5px" 
+				android:layout_marginRight="39px"
+				android:layout_height="wrap_content"/>
+		</LinearLayout>
+	</LinearLayout>
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
-		android:gravity="center_horizontal">
+		android:background="@drawable/grayroundededge"
+		android:layout_marginLeft="5px"
+		android:layout_marginRight="5px">
 		
-		<ImageView 
-			android:id="@+id/headerBannerImage"
-			android:layout_width="wrap_content" 
-			android:background="@drawable/header" 
-			android:gravity="center" 
-			android:layout_marginTop="5px" 
-			android:layout_marginRight="39px" android:layout_height="wrap_content"/>
+		<Button 
+			android:id="@+id/refreshButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:background="@drawable/button_refresh" 
+			android:layout_marginLeft="3px" />
+						
+		<EditText 
+			android:id="@+id/editText"
+			android:layout_height="wrap_content" 
+			android:layout_width="165px" 
+			android:maxLines="1"
+			android:singleLine="true" 
+			android:background="@drawable/roundededittext" android:layout_marginTop="2px"/>
+						
+		<Button 
+			android:id="@+id/mapButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:background="@drawable/seg_map"
+			android:layout_marginLeft="3px" />
+						
+		<Button 
+			android:id="@+id/arButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:background="@drawable/seg_ar" 
+			android:layout_marginLeft="3px" />
 	</LinearLayout>
 </LinearLayout>
