- Edited MainScreen.xml

--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -61,13 +61,13 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="@drawable/seg_map"
-			android:layout_marginLeft="3px" />
+			android:layout_marginLeft="3px" android:layout_marginTop="1px"/>
 						
 		<Button 
 			android:id="@+id/arButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="@drawable/seg_ar" 
-			android:layout_marginLeft="3px" />
+			android:layout_marginLeft="3px" android:layout_marginTop="1px"/>
 	</LinearLayout>
 </LinearLayout>
