--- a/res/drawable/roundedtopedge.xml
+++ b/res/drawable/roundedtopedge.xml
@@ -2,7 +2,7 @@
 <shape 
 	xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <solid android:color="@color/COLOR_GRAY" />
+    <solid android:color="#FFFFFF" />
     <corners
     	android:bottomRightRadius="0.01dp"
     	android:bottomLeftRadius="0.01dp"
