--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -8,14 +8,14 @@
 	android:gravity="top|center_horizontal">
 	
 	<LinearLayout 
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent"
 		android:orientation="vertical" 
 		android:layout_gravity="top|center_horizontal">
 	
 		<ImageView 
 			android:id="@+id/splashImgView"
-			android:layout_height="wrap_content"
+			android:layout_height="fill_parent"
 			android:src="@drawable/splash" 
 			android:layout_gravity="top|center_horizontal"
 			android:layout_width="fill_parent">
