--- a/res/layout/details_page.xml
+++ b/res/layout/details_page.xml
@@ -210,7 +210,7 @@
 						android:layout_marginRight="5px"
 						android:layout_marginTop="5px"/>
 			
-					<Button
+					<!-- <Button
 						android:id="@+id/facebookButton"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
@@ -218,7 +218,16 @@
 						android:layout_marginLeft="5px" 
 						android:layout_marginBottom="5px" 
 						android:layout_marginRight="5px"
-						android:layout_marginTop="5px"/>
+						android:layout_marginTop="5px"/> -->
+					
+					<com.codecarpet.fbconnect.FBLoginButton
+						android:id="@+id/facebookButton"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="5px" 
+						android:layout_marginBottom="5px" 
+						android:layout_marginRight="5px"
+						android:layout_marginTop="5px" />
 				
 					<Button
 						android:id="@+id/twitterButton"
