--- a/res/layout/twitter.xml
+++ b/res/layout/twitter.xml
@@ -44,7 +44,8 @@
 				android:layout_marginRight="10px" 
 				android:layout_marginLeft="10px" 
 				android:textSize="17px" 
-				android:typeface="sans"/>
+				android:typeface="sans" 
+				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
 			<EditText 
 				android:id="@+id/twitterUsernameEditText"
@@ -78,7 +79,8 @@
 				android:layout_marginRight="13px" 
 				android:layout_marginLeft="10px" 
 				android:textSize="17px" 
-				android:typeface="sans"/>
+				android:typeface="sans" 
+				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
 			<EditText 
 				android:id="@+id/twitterPasswordEditText"
@@ -113,7 +115,8 @@
 				android:layout_marginLeft="10px" 
 				android:textSize="17px" 
 				android:typeface="sans" 
-				android:layout_marginRight="43px"/>
+				android:layout_marginRight="43px" 
+				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
 			<EditText 
 				android:id="@+id/twitterTweetEditText"
