--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -8,4 +8,5 @@
 	<color name="COLOR_LINE">#a8abad</color>
 	<color name="COLOR_LIGHTBLUE">#67799f</color>
 	<color name="COLOR_GRAY">#C0C0C0</color>
+<color name="COLOR_LIGHT_GRAY">#bebebe</color>
 </resources>
