--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:background="@drawable/bg"
-	android:padding="0px">
+	android:orientation="vertical"
+	android:background="@drawable/bg">
 	
 	<include 
-		layout="@layout/map_header" 
-		android:layout_alignParentTop="true"
-		android:id="@+id/mapHeader" /> 
-	
-	<RelativeLayout 
-		android:layout_width="fill_parent" 
+		layout="@layout/map_header" />
+		
+	<LinearLayout
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/mapView"
-		android:layout_below="@id/mapHeader">
+		android:background="@drawable/roundededge"
+		android:orientation="vertical"
+		android:layout_marginLeft="5px"
+		android:layout_marginRight="5px"
+		android:padding="5px"
+		android:layout_marginBottom="5px">
 		
 		<com.insidetip.singtel.map.MapLocationViewer
 			android:id="@+id/mapLocationViewer" 
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content" />
-	</RelativeLayout>
-</RelativeLayout>
+		
+	</LinearLayout>
+</LinearLayout>
