--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -8,5 +8,6 @@
 	<color name="COLOR_LINE">#a8abad</color>
 	<color name="COLOR_LIGHTBLUE">#67799f</color>
 	<color name="COLOR_GRAY">#C0C0C0</color>
-<color name="COLOR_LIGHT_GRAY">#bebebe</color>
+	<color name="COLOR_LIGHT_GRAY">#bebebe</color>
+	<color name="COLOR_DARKER_LIGHT_BLUE">#2f2fff</color>
 </resources>
