--- a/res/layout/map_header.xml
+++ b/res/layout/map_header.xml
@@ -22,6 +22,7 @@
 	
 	<!-- Buttons -->
 	<LinearLayout
+		android:id="@+id/controlLayout"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal" 
