--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -9,5 +9,5 @@
 	<color name="COLOR_LIGHTBLUE">#67799f</color>
 	<color name="COLOR_GRAY">#C0C0C0</color>
 	<color name="COLOR_LIGHT_GRAY">#bebebe</color>
-	<color name="COLOR_DARKER_LIGHT_BLUE">#2f2fff</color>
+	<color name="COLOR_DARKER_LIGHT_BLUE">#00a2e8</color>
 </resources>
