--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -55,8 +55,8 @@
 			android:layout_height="wrap_content" 
 			android:layout_width="165px" 
 			android:maxLines="1"
-			android:singleLine="true" 
-			android:editable="false"
+			android:singleLine="true"
+			android:focusableInTouchMode="false"
 			android:gravity="center_horizontal|center_vertical"
 			android:text="Around Me"
 			android:textColor="@color/COLOR_BG"
