--- a/res/layout/mainscreen.xml
+++ b/res/layout/mainscreen.xml
@@ -46,7 +46,7 @@
 				android:layout_width="fill_parent" 
 				android:layout_height="fill_parent"
 				android:layout_gravity="center_horizontal"
-				android:divider="@drawable/list_line"
+				android:dividerHeight="1px"
 				android:fadingEdge="none"
 				android:scrollbars="none" />
 		</LinearLayout>
