--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -21,13 +21,27 @@
        	android:paddingRight="5px" 
        	android:layout_marginTop="5px" 
        	android:layout_marginBottom="5px">
-        			
-    	<ImageView 
-       		android:src="@drawable/cc_image"
-       		android:layout_width="wrap_content"
-       		android:layout_height="wrap_content" 
-       		android:padding="5px"/>
+       	
+       	<TableLayout
+			android:id="@+id/table"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingTop="5px"
+			android:paddingBottom="5px">
+		
+			<TableRow
+				android:id="@+id/tableRow"
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content">
+			</TableRow>
+		</TableLayout>
+		
+		<!-- <com.insidetip.singtel.screen.CustomImageView
+			android:id="@+id/cell"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" />-->
 	</HorizontalScrollView>
+	
 	
 	<LinearLayout
 		android:layout_width="fill_parent" 
