--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -63,7 +63,7 @@
 					android:paddingBottom="8px"
 					android:layout_marginLeft="5px"
 					android:layout_marginRight="5px"
-					android:background="@drawable/grayroundededge"
+					
 					android:text="Select Credit Cards">
 				</TextView>
 			</LinearLayout>
@@ -74,7 +74,7 @@
 				android:orientation="vertical"
 				android:layout_marginLeft="5px"
 				android:layout_marginRight="5px"
-				android:background="@drawable/listbgrounded">
+				>
 				
 				<!-- Credit Card Buttons -->
 				<LinearLayout
@@ -155,6 +155,21 @@
 						android:layout_marginTop="5px"
 						android:layout_marginBottom="5px"
 						android:background="@drawable/uob"/>
+				</LinearLayout>
+				
+				<LinearLayout
+					android:orientation="horizontal"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:gravity="center_vertical|center_horizontal">
+					
+					<ScrollView
+						android:id="@+id/scrollView"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content">
+						
+						<include layout="@layout/bankdata" />
+					</ScrollView>
 				</LinearLayout>
 			</LinearLayout>
 		</LinearLayout>
