--- a/res/layout/bankdata.xml
+++ b/res/layout/bankdata.xml
@@ -44,7 +44,7 @@
 					
 					<CheckBox
 						android:id="@+id/clearplatinumvisa"
-						
+						android:checked="true"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:button="@drawable/checkbox"/>
@@ -66,7 +66,7 @@
 			
 				<CheckBox
 					android:id="@+id/dividendplatinum"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -87,7 +87,7 @@
 			
 				<CheckBox
 					android:id="@+id/paragonmastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -108,7 +108,7 @@
 			
 				<CheckBox
 					android:id="@+id/paragonvisa"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -129,7 +129,7 @@
 			
 				<CheckBox
 					android:id="@+id/premieremilesvisa"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -150,7 +150,7 @@
 			
 				<CheckBox
 					android:id="@+id/smrtcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -172,7 +172,7 @@
 			
 				<CheckBox
 					android:id="@+id/blackamericanexpress"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -193,7 +193,7 @@
 			
 				<CheckBox
 					android:id="@+id/livefreshplatinum"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -214,7 +214,7 @@
 			
 				<CheckBox
 					android:id="@+id/dbsplatinummastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -236,7 +236,7 @@
 			
 				<CheckBox
 					android:id="@+id/artsplatinumcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -257,7 +257,7 @@
 			
 				<CheckBox
 					android:id="@+id/bestdenkiplatinumcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -278,7 +278,7 @@
 			
 				<CheckBox
 					android:id="@+id/classicvisacard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -299,7 +299,7 @@
 			
 				<CheckBox
 					android:id="@+id/debitcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -320,7 +320,7 @@
 			
 				<CheckBox
 					android:id="@+id/fairpriceplusvisacard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -341,7 +341,7 @@
 			
 				<CheckBox
 					android:id="@+id/goldmastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -362,7 +362,7 @@
 			
 				<CheckBox
 					android:id="@+id/ikeafriendsvisacard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -383,7 +383,7 @@
 			
 				<CheckBox
 					android:id="@+id/ntuvisaclassiccard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -404,7 +404,7 @@
 			
 				<CheckBox
 					android:id="@+id/ntuvisagoldcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -425,7 +425,7 @@
 			
 				<CheckBox
 					android:id="@+id/platinummastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -446,7 +446,7 @@
 			
 				<CheckBox
 					android:id="@+id/robinsonsplatinumcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -467,7 +467,7 @@
 			
 				<CheckBox
 					android:id="@+id/smudebitcards"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -488,7 +488,7 @@
 			
 				<CheckBox
 					android:id="@+id/smuplatinummastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -509,7 +509,7 @@
 			
 				<CheckBox
 					android:id="@+id/titaniummastercard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -530,7 +530,7 @@
 			
 				<CheckBox
 					android:id="@+id/uplusvisacard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -551,7 +551,7 @@
 			
 				<CheckBox
 					android:id="@+id/uplusplatinumcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -572,7 +572,7 @@
 			
 				<CheckBox
 					android:id="@+id/yesdebitcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -594,7 +594,7 @@
 			
 				<CheckBox
 					android:id="@+id/directvisacard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -615,7 +615,7 @@
 			
 				<CheckBox
 					android:id="@+id/ladyscard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -636,7 +636,7 @@
 			
 				<CheckBox
 					android:id="@+id/mastercardclassiccard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -657,7 +657,7 @@
 			
 				<CheckBox
 					android:id="@+id/mastercardgoldcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -678,7 +678,7 @@
 			
 				<CheckBox
 					android:id="@+id/onecard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -699,7 +699,7 @@
 			
 				<CheckBox
 					android:id="@+id/preferredworld"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -720,7 +720,7 @@
 			
 				<CheckBox
 					android:id="@+id/prvivisaamerican"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -741,7 +741,7 @@
 			
 				<CheckBox
 					android:id="@+id/visaclassiccard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -762,7 +762,7 @@
 			
 				<CheckBox
 					android:id="@+id/visagoldcard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -783,7 +783,7 @@
 			
 				<CheckBox
 					android:id="@+id/visainfinitecard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
@@ -804,7 +804,7 @@
 			
 				<CheckBox
 					android:id="@+id/visasignaturecard"
-					
+					android:checked="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:button="@drawable/checkbox" />
