--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -7,6 +7,7 @@
 	
 	<HorizontalScrollView
 		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/scrollView"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:scrollbars="none"
