--- a/res/anim/hyperspace_out.xml
+++ b/res/anim/hyperspace_out.xml
@@ -14,38 +14,7 @@
      limitations under the License.
 -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:shareInterpolator="false">
-
-	<scale 
-		android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-		android:fromXScale="1.0" 
-		android:toXScale="1.4" 
-		android:fromYScale="1.0" 
-		android:toYScale="0.6" 
-		android:pivotX="50%"
-		android:pivotY="50%"
-		android:fillAfter="false"
-		android:duration="200" />
-
-	<set 
-		android:interpolator="@android:anim/accelerate_interpolator"
-                android:startOffset="700">
-		
-		<scale
-			android:fromXScale="1.4" 
-			android:toXScale="0.0"
-		        android:fromYScale="0.6"
-	 		android:toYScale="0.0" 
-	 		android:pivotX="50%" 
-	 		android:pivotY="50%" 
-	 		android:duration="200" />
- 		
-		<rotate 
-			android:fromDegrees="0" 
-			android:toDegrees="360"
-	 		android:toYScale="0.0" 
-	 		android:pivotX="50%" 
-	 		android:pivotY="50%"
-	 		android:duration="200" />
-	</set>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+	<translate android:fromXDelta="100%p" android:toXDelta="0" android:duration="100"/>
+	<alpha android:fromAlpha="0.0" android:toAlpha="1.0" android:duration="100" />
 </set>
