--- a/res/layout/map_header.xml
+++ b/res/layout/map_header.xml
@@ -54,7 +54,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
-		android:gravity="center_vertical|center_horizontal">
+		android:gravity="center_vertical|center_horizontal" android:id="@+id/addressTextLayout">
 		
 		<TextView 
 			android:id="@+id/addressTextView"
