--- a/res/layout/twitter.xml
+++ b/res/layout/twitter.xml
@@ -151,7 +151,7 @@
 				android:layout_marginLeft="10px" 
 				android:layout_marginRight="10px" 
 				android:textSize="17px" 
-				android:typeface="sans" android:text="#Singtel #BestSGDeals"/>
+				android:typeface="sans" android:text="#Singtel #ILoveDeals"/>
 		</LinearLayout>
 		
 		<View
