--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -10,13 +10,13 @@
 		android:orientation="horizontal" 
 		android:layout_height="wrap_content">
 	
-		<Button 
+		<!-- <Button 
 			android:id="@+id/settingsButton"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
 			android:background="@drawable/buttonsetting"
 			android:layout_marginTop="5px" 
-			android:layout_marginLeft="5px" />
+			android:layout_marginLeft="5px" />  -->
 			
 		<LinearLayout
 			android:layout_width="fill_parent"
@@ -30,7 +30,6 @@
 				android:background="@drawable/header" 
 				android:gravity="center" 
 				android:layout_marginTop="5px" 
-				android:layout_marginRight="39px"
 				android:layout_height="wrap_content"/>
 		</LinearLayout>
 		<Button 
