--- a/res/layout/header_template.xml
+++ b/res/layout/header_template.xml
@@ -26,12 +26,13 @@
 		
 			<ImageView 
 				android:id="@+id/headerBannerImage"
-				android:layout_width="wrap_content" 
-				android:background="@drawable/header" 
+ 				android:layout_width="wrap_content" 
+ 				android:background="@drawable/header" 
 				android:gravity="center" 
 				android:layout_marginTop="5px" 
-				android:layout_height="wrap_content"/>
+ 				android:layout_height="wrap_content"/>
 		</LinearLayout>
+		
 		<Button 
 			android:id="@+id/editButton"
 			android:layout_width="wrap_content"
@@ -47,6 +48,7 @@
 	</LinearLayout>
 	
 	<LinearLayout
+		android:gravity="center_vertical|center_horizontal"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
@@ -54,12 +56,19 @@
 		android:layout_marginLeft="5px"
 		android:layout_marginRight="5px">
 		
+		<ImageView 
+			android:id="@+id/myFaveImage"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:background="@drawable/myfavorite"
+			android:layout_margin="8px"
+			android:visibility="gone" />
+			
 		<Button 
 			android:id="@+id/refreshButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:background="@drawable/button_refresh" 
-			android:layout_marginLeft="3px" />
+			android:background="@drawable/button_refresh"  />
 						
 		<EditText 
 			android:id="@+id/searchEditText"
@@ -71,8 +80,7 @@
 			android:gravity="center_horizontal|center_vertical"
 			android:text="Around Me - All"
 			android:textColor="@color/COLOR_BG"
-			android:background="@drawable/roundededittext"
-			android:layout_marginTop="2px"/>
+			android:background="@drawable/roundededittext"/>
 						
 		<Button 
 			android:id="@+id/mapButton"
@@ -90,6 +98,7 @@
 			android:layout_marginLeft="3px"
 			android:layout_marginTop="1px"/>
 	</LinearLayout>
+	
 	<TextView 
 		android:id="@+id/deleteTextView"
 		android:layout_width="fill_parent"
