--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -5,74 +5,71 @@
 	android:orientation="vertical"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	
-	<HorizontalScrollView
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@+id/scrollView"
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:scrollbars="none"
-    	android:background="@drawable/roundededge"
-    	android:layout_marginRight="5px"
-       	android:foregroundGravity="center_vertical|center_horizontal" 
-       	android:clipChildren="true" 
-       	android:fadingEdge="none" 
-       	android:clipToPadding="true" 
-       	android:layout_marginLeft="5px" 
-       	android:paddingLeft="5px" 
-       	android:paddingRight="5px" 
-       	android:layout_marginTop="5px" 
-       	android:layout_marginBottom="5px">
-       	
-       	<LinearLayout
-       		android:layout_width="fill_parent"
-       		android:layout_height="wrap_content"
-       		android:orientation="horizontal">
-       		
-       		<Button
-       			android:layout_marginTop="5px"
-				android:layout_marginBottom="5px"
-       			android:id="@+id/settingsCard"
-				android:background="@drawable/configurecards"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
-				
-			<TableLayout
-				android:id="@+id/table"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:paddingTop="5px"
-				android:paddingBottom="5px"
-				android:orientation="horizontal">
-			
-				<TableRow
-					android:id="@+id/tableRow"
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content">
-				</TableRow>
-			</TableLayout>
-       	</LinearLayout>
-       	
-       	<!-- <TableLayout
-			android:id="@+id/table"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:paddingTop="5px"
-			android:paddingBottom="5px"
-			android:orientation="horizontal">
-			
-			<TableRow
-				android:id="@+id/tableRow"
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content">
-			</TableRow>
-		</TableLayout> -->
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/roundededge"
+		android:layout_marginRight="5px"
+		android:layout_marginLeft="5px" 
+		android:paddingLeft="5px"
+		android:paddingRight="5px"
+		android:layout_marginTop="5px" 
+		android:layout_marginBottom="5px"
+		android:orientation="horizontal">
 		
-		<!-- <com.insidetip.singtel.screen.CustomImageView
-			android:id="@+id/cell"
+		<ImageView
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" />-->
-	</HorizontalScrollView>
-	
+			android:layout_height="fill_parent"
+			android:background="@drawable/scroll_left" />
+			
+		<HorizontalScrollView
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			android:id="@+id/scrollView"
+    		android:layout_width="fill_parent"
+    		android:layout_height="wrap_content"
+    		android:scrollbars="none"
+       		android:foregroundGravity="center_vertical|center_horizontal" 
+       		android:clipChildren="true" 
+       		android:fadingEdge="none" 
+       		android:clipToPadding="true" 
+       		android:paddingRight="15px">
+       	
+       		<LinearLayout
+       			android:layout_width="fill_parent"
+       			android:layout_height="wrap_content"
+       			android:orientation="horizontal">
+       		
+	       		<Button
+       				android:layout_marginTop="5px"
+					android:layout_marginBottom="5px"
+	       			android:id="@+id/settingsCard"
+					android:background="@drawable/configurecards"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content" />
+					
+				<TableLayout
+					android:id="@+id/table"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:paddingTop="5px"
+					android:paddingBottom="5px"
+					android:orientation="horizontal">
+			
+					<TableRow
+						android:id="@+id/tableRow"
+						android:layout_height="wrap_content"
+						android:layout_width="wrap_content">
+					</TableRow>
+				</TableLayout>
+       		</LinearLayout>
+		</HorizontalScrollView>
+		
+		<ImageView
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:layout_marginLeft="-15px"
+			android:background="@drawable/scroll_right" />
+	</LinearLayout>
 	
 	<LinearLayout
 		android:layout_width="fill_parent" 
