--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -6,6 +6,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	
 	<LinearLayout
+		android:id="@+id/cardLayoutView"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/roundededge"
